Add additional information

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -52,6 +52,18 @@
                             <th scope="row">Site description</th>
                             <td>{{ site_description }}</td>
                         </tr>
+                        <tr>
+                            <th scope="row">Number of SASS records</th>
+                            <td id="number-of-sass-record">0</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Earliest record</th>
+                            <td id="earliest-record">-</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Latest record</th>
+                            <td id="latest-record">-</td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
