Add view to download sass_data by site

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -60,3 +60,14 @@ body {
     font-weight: bolder;
     background-color: rgba(88, 159, 72, 0.1) !important;
 }
+
+.download-container {
+    font-size: 11pt;
+    font-weight: bold;
+}
+
+.download-as-csv {
+    font-size: 10pt;
+    text-transform: none;
+    border-radius: 5px;
+}
