--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -94,6 +94,12 @@
                         <tbody id="sass-taxon-per-biotope">
                         </tbody>
                     </table>
+                    <div class="download-container">
+                        Download all SASS data for this site :
+                        <button class="btn btn-info download-as-csv">
+                            Download as CSV
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-6 mp">
@@ -104,7 +110,9 @@
                 </div>
                 <div class="vertical-space"></div>
                 <div class="chart-container">
-                    <div class="chart-title">Proportion of sensitive to tolerant</div>
+                    <div class="chart-title">Proportion of sensitive to
+                        tolerant
+                    </div>
                     <canvas id="sensitivity-chart"></canvas>
                 </div>
                 <div class="vertical-space"></div>
