Create a template chart for ecological chart

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -112,6 +112,11 @@
                     <div class="chart-title">Biotope ratings</div>
                     <canvas id="biotope-ratings-chart"></canvas>
                 </div>
+                <div class="vertical-space"></div>
+                <div class="chart-container">
+                    <div class="chart-title">Ecological category</div>
+                    <canvas id="ecological-category-chart"></canvas>
+                </div>
             </div>
         </div>
     </div>
