--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -23,6 +23,7 @@
         const sensitivityChartData = {{ sensitivity_chart_data | safe }};
         const coordinates = [{{ coord.0 }}, {{ coord.1 }}];
         const siteCode = "{{ site_code }}";
+        const siteId = "{{ site_id }}";
         const biotopeRatingData = {{ biotope_ratings_chart_data.rating_data | safe }};
         const biotopeRatingLabels = {{ biotope_ratings_chart_data.biotope_labels | safe }};
     </script>
@@ -94,6 +95,12 @@
                         <tbody id="sass-taxon-per-biotope">
                         </tbody>
                     </table>
+                    <div class="download-container">
+                        Download all SASS data for this site :
+                        <button class="btn btn-info download-as-csv">
+                            Download as CSV
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-6 mp">
@@ -104,7 +111,9 @@
                 </div>
                 <div class="vertical-space"></div>
                 <div class="chart-container">
-                    <div class="chart-title">Proportion of sensitive to tolerant</div>
+                    <div class="chart-title">Proportion of sensitive to
+                        tolerant
+                    </div>
                     <canvas id="sensitivity-chart"></canvas>
                 </div>
                 <div class="vertical-space"></div>
