--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -14,161 +14,201 @@
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
     <script type="text/javascript">
-        const sassScores = {{ sass_score_chart_data.sass_scores }};
-        const dateLabels = {{ sass_score_chart_data.date_labels | safe }};
-        const taxaNumbers = {{ sass_score_chart_data.taxa_numbers }};
-        const asptList = {{ sass_score_chart_data.aspt_list }};
-        const sassTaxonData = {{ sass_taxon_table_data.sass_taxon_data | safe }};
-        const biotopeData = {{ sass_taxon_table_data.biotope_data | safe }};
-        const sensitivityChartData = {{ sensitivity_chart_data | safe }};
         const coordinates = [{{ coord.0 }}, {{ coord.1 }}];
         const siteCode = "{{ site_code }}";
         const siteId = "{{ site_id }}";
-        const biotopeRatingData = {{ biotope_ratings_chart_data.rating_data | safe }};
-        const biotopeRatingLabels = {{ biotope_ratings_chart_data.biotope_labels | safe }};
-        const riverCatchments = {% if river_catchments %}{{ river_catchments | safe }}{% else %}[]{% endif %};
-        const arrAvg = arr => arr.reduce((a,b) => a + b, 0) / arr.length;
+        const arrAvg = arr => arr.reduce((a, b) => a + b, 0) / arr.length;
+        const sassExists = {% if sass_exists %}true{% else %}false{% endif %};
     </script>
 
 {% endblock %}
 
 {% block body_content %}
-    <div class="body-form container">
-        <div class="logo hide-logo pull-right"><img width="50"
-                                                    src="{% static 'img/bims-stamp.png' %}">
-        </div>
-        <h2 class="dashboard-title">SASS Dashboard</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="map-container" id="map"></div>
-                <div class="vertical-space"></div>
-                <div class="table-container">
-                    <table class="sass-info table table-striped">
-                        <tbody>
-                        <tr>
-                            <th scope="row">FBIS Site Code</th>
-                            <td>{{ site_code }}</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Site coordinates</th>
-                            <td>{{ coord.0 }}, {{ coord.1 }}</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Site description</th>
-                            <td>{{ site_description }}</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Number of SASS records</th>
-                            <td id="number-of-sass-record">0</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Earliest record</th>
-                            <td id="earliest-record">-</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Latest record</th>
-                            <td id="latest-record">-</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="vertical-space"></div>
-                <div class="table-container">
-                    <div class="table-title">
-                        Metrics Data
+    {% if sass_exists %}
+        <script type="text/javascript">
+            const sassScores = {{ sass_score_chart_data.sass_scores }};
+            const dateLabels = {{ sass_score_chart_data.date_labels | safe }};
+            const taxaNumbers = {{ sass_score_chart_data.taxa_numbers }};
+            const asptList = {{ sass_score_chart_data.aspt_list }};
+            const sassTaxonData = {{ sass_taxon_table_data.sass_taxon_data | safe }};
+            const biotopeData = {{ sass_taxon_table_data.biotope_data | safe }};
+            const sensitivityChartData = {{ sensitivity_chart_data | safe }};
+            const biotopeRatingData = {{ biotope_ratings_chart_data.rating_data | safe }};
+            const biotopeRatingLabels = {{ biotope_ratings_chart_data.biotope_labels | safe }};
+            const riverCatchments = {% if river_catchments %}{{ river_catchments | safe }}{% else %}[]{% endif %};
+        </script>
+        <div class="body-form container">
+            <div class="logo hide-logo pull-right"><img width="50"
+                                                        src="{% static 'img/bims-stamp.png' %}">
+            </div>
+            <h2 class="dashboard-title">SASS Dashboard</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="map-container" id="map"></div>
+                    <div class="vertical-space"></div>
+                    <div class="table-container">
+                        <table class="sass-info table table-striped">
+                            <tbody>
+                            <tr>
+                                <th scope="row">FBIS Site Code</th>
+                                <td>{{ site_code }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Site coordinates</th>
+                                <td>{{ coord.0 }}, {{ coord.1 }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Site description</th>
+                                <td>{{ site_description }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Number of SASS records</th>
+                                <td id="number-of-sass-record">0</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Earliest record</th>
+                                <td id="earliest-record">-</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Latest record</th>
+                                <td id="latest-record">-</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <table class="table table-condensed table-striped sass-metrics-table">
-                        <thead>
-                        <tr>
-                            <th>
-                                Metric
-                            </th>
-                            <th>
-                                Average
-                            </th>
-                            <th>
-                                Minimum
-                            </th>
-                            <th>
-                                Maximum
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="vertical-space"></div>
-                <div class="table-container">
-                    <div class="table-title">
-                        SASS Taxa per biotope
-                        <span class="pull-right">
+                    <div class="vertical-space"></div>
+                    <div class="table-container">
+                        <div class="table-title">
+                            Metrics Data
+                        </div>
+                        <table class="table table-condensed table-striped sass-metrics-table">
+                            <thead>
+                            <tr>
+                                <th>
+                                    Metric
+                                </th>
+                                <th>
+                                    Average
+                                </th>
+                                <th>
+                                    Minimum
+                                </th>
+                                <th>
+                                    Maximum
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="vertical-space"></div>
+                    <div class="table-container">
+                        <div class="table-title">
+                            SASS Taxa per biotope
+                            <span class="pull-right">
                             {{ sass_taxon_table_data.site_visit_date }}
                         </span>
-                    </div>
-                    <table class="table table-condensed table-striped sass-taxon-per-biotope-table">
-                        <thead>
-                        <tr>
-                            <th>
-                                TAXA
-                            </th>
-                            <th></th>
-                            <th>
-                                Weight
-                            </th>
-                            <th>S</th>
-                            <th>V</th>
-                            <th>G</th>
-                            <th>Site</th>
-                        </tr>
-                        </thead>
-                        <tbody id="sass-taxon-per-biotope">
-                        </tbody>
-                    </table>
-                    <div class="download-container">
-                        Download all SASS data for this site :
-                        <button class="btn btn-info download-as-csv">
-                            Download as CSV
-                        </button>
+                        </div>
+                        <table class="table table-condensed table-striped sass-taxon-per-biotope-table">
+                            <thead>
+                            <tr>
+                                <th>
+                                    TAXA
+                                </th>
+                                <th></th>
+                                <th>
+                                    Weight
+                                </th>
+                                <th>S</th>
+                                <th>V</th>
+                                <th>G</th>
+                                <th>Site</th>
+                            </tr>
+                            </thead>
+                            <tbody id="sass-taxon-per-biotope">
+                            </tbody>
+                        </table>
+                        <div class="download-container">
+                            Download all SASS data for this site :
+                            <button class="btn btn-info download-as-csv">
+                                Download as CSV
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 mp">
-                <div class="chart-container">
-                    <div class="chart-title">SASS charts
-                        <i data-download-title="SASS charts"
-                           data-toggle="tooltip" data-placement="left"
-                           title="Download charts"
-                           class="fa fa-download pull-right download-chart"></i>
+                <div class="col-md-6 mp">
+                    <div class="chart-container">
+                        <div class="chart-title">SASS charts
+                            <i data-download-title="SASS charts"
+                               data-toggle="tooltip" data-placement="left"
+                               title="Download charts"
+                               class="fa fa-download pull-right download-chart"></i>
+                        </div>
+                        <canvas id="sass-score-chart"></canvas>
+                        <canvas id="taxa-numbers-chart"></canvas>
+                        <canvas id="aspt-chart"></canvas>
                     </div>
-                    <canvas id="sass-score-chart"></canvas>
-                    <canvas id="taxa-numbers-chart"></canvas>
-                    <canvas id="aspt-chart"></canvas>
-                </div>
-                <div class="vertical-space"></div>
-                <div class="chart-container">
-                    <div class="chart-title">Proportion of sensitive to
-                        tolerant
-                        <i data-download-title="Proportion of sensitive to tolerant"
-                           data-toggle="tooltip" data-placement="left"
-                           title="Download chart"
-                           class="fa fa-download pull-right download-chart"></i>
+                    <div class="vertical-space"></div>
+                    <div class="chart-container">
+                        <div class="chart-title">Proportion of sensitive to
+                            tolerant
+                            <i data-download-title="Proportion of sensitive to tolerant"
+                               data-toggle="tooltip" data-placement="left"
+                               title="Download chart"
+                               class="fa fa-download pull-right download-chart"></i>
+                        </div>
+                        <canvas id="sensitivity-chart"></canvas>
                     </div>
-                    <canvas id="sensitivity-chart"></canvas>
-                </div>
-                <div class="vertical-space"></div>
-                <div class="chart-container">
-                    <div class="chart-title">Biotope ratings
-                        <i data-download-title="Biotope ratings"
-                           data-toggle="tooltip" data-placement="left"
-                           title="Download chart"
-                           class="fa fa-download pull-right download-chart"></i>
+                    <div class="vertical-space"></div>
+                    <div class="chart-container">
+                        <div class="chart-title">Biotope ratings
+                            <i data-download-title="Biotope ratings"
+                               data-toggle="tooltip" data-placement="left"
+                               title="Download chart"
+                               class="fa fa-download pull-right download-chart"></i>
+                        </div>
+                        <canvas id="biotope-ratings-chart"></canvas>
                     </div>
-                    <canvas id="biotope-ratings-chart"></canvas>
                 </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        <div class="body-form container">
+            <h2 class="dashboard-title">SASS Dashboard</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="alert alert-warning jumbotron ">
+                        <div class="container" style="padding-top: 15px;">
+                            <p class="lead">
+                                No SASS data found for this site or filters
+                            </p>
+                        </div>
+                    </div>
+                    <div class="map-container" id="map"></div>
+                    <div class="vertical-space"></div>
+                    <div class="table-container">
+                        <table class="sass-info table table-striped">
+                            <tbody>
+                            <tr>
+                                <th scope="row">FBIS Site Code</th>
+                                <td>{{ site_code }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Site coordinates</th>
+                                <td>{{ coord.0 }}, {{ coord.1 }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Site description</th>
+                                <td>{{ site_description }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block foot %}
