Initial sass multiple site dashboard

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -90,3 +90,20 @@ body {
 .hide-logo {
     display: none;
 }
+
+.ajax-container {
+    display: none;
+}
+
+.loading-title {
+    position: absolute;
+    font-size: 30px;
+    color: #1b900d;
+    top: 38%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+}
+
+.chart-container .row {
+    padding-top: 10px;
+}
