Fix sass score charts

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -39,7 +39,7 @@
                 <div class="map-container ajax-container" id="map"></div>
                 <div class="vertical-space"></div>
                 <div class="chart-container ajax-container">
-                    <div class="chart-title">SASS charts
+                    <div class="chart-title">SASS Charts
                         <i data-download-title="SASS charts"
                            data-toggle="tooltip" data-placement="left"
                            title="Download charts"
@@ -47,7 +47,7 @@
                     </div>
                     <div class="row no-padding">
                         <div class="col-md-4">
-                            <canvas id="sass-score-chart"></canvas>
+                            <canvas id="sass-score-chart" style="position: relative;"></canvas>
                         </div>
                         <div class="col-md-4">
                             <canvas id="taxa-numbers-chart"></canvas>
