Add sass summary table

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -57,6 +57,47 @@
                         </div>
                     </div>
                 </div>
+                <div class="vertical-space"></div>
+                 <div class="table-container">
+                        <div class="table-title">
+                            SASS Summary
+                        </div>
+                        <table class="table table-condensed table-striped sass-summary-table">
+                            <thead>
+                            <tr>
+                                <th>
+                                    Site Code
+                                </th>
+                                <th>
+                                    Average (min-max) SASS Score
+                                </th>
+                                <th>
+                                    Average (min-max) Number of Taxa
+                                </th>
+                                <th>
+                                    Average (min-max) ASPT
+                                </th>
+                                <th>
+                                    Number of assessments
+                                </th>
+                                <th>
+                                    Latest SASS Score
+                                </th>
+                                <th>
+                                    Latest Number of Taxa
+                                </th>
+                                <th>
+                                    Latest ASPT
+                                </th>
+                                <th>
+                                    Date of latest SASS assessment
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody id="sass-summary-table">
+                            </tbody>
+                        </table>
+                    </div>
             </div>
         </div>
     </div>
