--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -21,3 +21,12 @@
     </div>
 </script>
 
+<script type='text/html' id='biodiversity-data-template'>
+   <div id="site-detail" class="search-results-wrapper">
+       <div class="search-results-total" data-visibility="false">
+           <span class="search-result-title"> Biodiversity Data </span>
+           <i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+       </div>
+   </div>
+</script>
+
