Show biotope ratings chart

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -107,3 +107,9 @@ body {
 .chart-container .row {
     padding-top: 10px;
 }
+
+.table-overflow {
+    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
