Add download sass button in multi site dashboard

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -113,3 +113,8 @@ body {
     overflow-x: auto;
     overflow-y: hidden;
 }
+
+.download-top-container {
+    float: right;
+    margin-top: -8px;
+}
